--- a/src/app/container/container.component.html
+++ b/src/app/container/container.component.html
@@ -1,4 +1,3 @@
-
-<div style="padding: 10px; background-color:aquamarine; min-height: min-content; ">
+<div class="routing_container">
     <router-outlet></router-outlet>
 </div>
